added log-out, CORS config.